--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "styled-components": "^6.1.13"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
