--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "blog-management": "file:",
     "cra-template": "1.2.0",
+    "gh-pages": "^6.2.0",
     "lucide-react": "^0.344.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
